...

    <string name="content_description_university">University</string>
    <string name="content_description_birthday">Birthday</string>

    <string name="content_description_event_image">Event Image</string>
    <string name="content_description_event_image_placeholder">Event Image Placeholder</string>
    <string name="content_description_participants">Participants</string>
    <string name="content_description_home">Home</string>
    <string name="content_description_action_icon">action icon</string>
    <string name="content_description_action_button">Action button</string>
    <string name="content_description_close_filters">Close Filters</string>
    <string name="content_description_selected_photo">Selected photo</string>
    <string name="content_description_upload_photo">Upload photo</string>
...
    <string name="toast_camera_storage_error">Unable to access camera storage</string>
    <string name="toast_friends_list_coming_soon">Friends list coming soon</string>
    <string name="toast_edit_profile">Edit Profile</string>
    <string name="toast_user_card">User Card</string>

    <!-- Friends list -->
    <string name="title_friends_list">Friends</string>
    <string name="placeholder_search_friends">Search friends…</string>
    <string name="text_no_friends_title">No friends yet :(</string>
    <string name="text_no_friends_subtitle">Add more friends and they will appear here :)</string>
    <string name="error_failed_to_load_friends">Failed to load friends</string>
    <string name="content_description_friend_profile_picture">Friend profile picture</string>

...
