...
  const val VALIDATION_RESULT_INVALID = "event_view_validation_result_invalid"
  const val VALIDATION_RESULT_ERROR = "event_view_validation_result_error"
  const val ATTENDEE_LIST_ITEM = "event_view_attendee_list_item"
  const val ATTENDEE_LIST_OWNER = "event_view_attendee_list_owner"
  const val ATTENDEE_LIST_CURRENT_USER = "event_view_attendee_list_current_user"
  const val ATTENDEE_LIST = "event_view_attendee_list"
  const val JOIN_BUTTON = "event_view_join_button"
  const val PARTICIPANTS_INFO = "event_view_participants_info"
  const val BASE_SCREEN = "event_view_base_screen"
  const val CREATE_POLL_BUTTON = "event_view_create_poll_button"
  const val VIEW_POLLS_BUTTON = "event_view_view_polls_button"
  const val POLL_NOTIFICATION_CARD = "event_view_poll_notification_card"
  const val OWNER_TAB_ROW = "event_view_owner_tab_row"
  const val OWNER_TAB_EVENT = "event_view_owner_tab_event"
...
